# abstract-vm

./: README.md
source/: 2Parse.hpp  Adders.hpp  ArithmeticExceptions.cpp  ArithmeticExceptions.hpp  CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  IOperand.hpp  Input.cpp  Input.hpp  InputCompletion.cpp  InputCompletion.hpp  InputHandler.hpp  InputLoop.cpp  InputLoop.hpp  InstructionStack.cpp  InstructionStack.hpp  Lexer.hpp  MachineStack.cpp  MachineStack.hpp  Operand.hpp  OperandFactory.cpp  OperandFactory.hpp  OverflowCheck.cpp  OverflowCheck.hpp  Parse.cpp  Parse.hpp  Parser.hpp  ParserUtils.hpp  Reader.hpp  Token.cpp  Token.hpp  ValueStack.cpp  ValueStack.hpp  VirtualMachine.cpp  VirtualMachine.hpp  addFloating.cpp  addIntegral.cpp  c_string.cpp  c_string.hpp  (+8 more)
